--- a/MobileApplication/app/build.gradle
+++ b/MobileApplication/app/build.gradle
@@ -24,7 +24,7 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation"org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
     implementation 'com.android.support:appcompat-v7:26.1.0'
     implementation 'com.android.support:support-v4:26.1.0'
     implementation 'com.android.support:design:26.1.0'
@@ -32,4 +32,11 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
+    compile 'com.github.kittinunf.fuel:fuel:1.12.0' //for JVM
+    compile 'com.github.kittinunf.fuel:fuel-android:1.12.0' //for Android
+    compile 'com.github.kittinunf.fuel:fuel-livedata:1.12.0' //for LiveData support
+    compile 'com.github.kittinunf.fuel:fuel-rxjava:1.12.0' //for RxJava support
+    compile 'com.github.kittinunf.fuel:fuel-gson:1.12.0' //for Gson support
+    compile 'com.github.kittinunf.fuel:fuel-jackson:1.12.0' //for Jackson support
+    compile 'com.github.kittinunf.fuel:fuel-moshi:1.12.0' //for Moshi support
 }
