--- a/MobileApplication/app/build.gradle
+++ b/MobileApplication/app/build.gradle
@@ -13,6 +13,14 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        vectorDrawables.useSupportLibrary = true
+    }
+    sourceSets {
+        main {
+            assets.srcDirs = ['src/main/assets']
+            res.srcDirs = ['src/main/res']
+            manifest.srcFile 'src/main/AndroidManifest.xml'
+        }
     }
     buildTypes {
         release {
@@ -29,6 +37,7 @@ dependencies {
     implementation 'com.android.support:support-v4:26.1.0'
     implementation 'com.android.support:design:26.1.0'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
+    implementation 'com.android.support:recyclerview-v7:26.1.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
@@ -39,4 +48,5 @@ dependencies {
     compile 'com.github.kittinunf.fuel:fuel-gson:1.12.0' //for Gson support
     compile 'com.github.kittinunf.fuel:fuel-jackson:1.12.0' //for Jackson support
     compile 'com.github.kittinunf.fuel:fuel-moshi:1.12.0' //for Moshi support
+    compile  'com.github.japgolly:svg-android:2.0.0'
 }
