--- a/MobileApplication/app/build.gradle
+++ b/MobileApplication/app/build.gradle
@@ -4,6 +4,8 @@ apply plugin: 'kotlin-android'
 
 apply plugin: 'kotlin-android-extensions'
 
+apply plugin: 'kotlin-kapt'
+
 android {
     compileSdkVersion 26
     defaultConfig {
@@ -50,8 +52,7 @@ dependencies {
     compile 'com.github.kittinunf.fuel:fuel-jackson:1.12.0' //for Jackson support
     compile 'com.github.kittinunf.fuel:fuel-moshi:1.12.0' //for Moshi support
     compile 'com.github.markushi:circlebutton:1.1'
-    compile 'android.arch.persistence.room:runtime:1.0.0'
-    compile 'android.arch.persistence.room:rxjava2:1.0.0'
-    kapt "android.arch.persistence.room:compiler:1.0.0"
     compile 'com.android.support:multidex:1.0.2'
+    compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
+    compile 'io.reactivex.rxjava2:rxjava:2.1.6'
 }
