--- a/MobileApplication/app/src/main/AndroidManifest.xml
+++ b/MobileApplication/app/src/main/AndroidManifest.xml
@@ -10,7 +10,6 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
 
     <application
-        android:name=".MobileHomeApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -33,7 +32,7 @@
             android:name=".view.activities.LoginActivity"
             android:label="@string/title_activity_login" />
 
-        <activity android:name=".view.activities.RegisterActivity"></activity>
+        <activity android:name=".view.activities.RegisterActivity" />
     </application>
 
 </manifest>
