--- a/MobileApplication/app/src/main/AndroidManifest.xml
+++ b/MobileApplication/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
 
-        <activity android:name=".view.activities.MainActivity">
+        <activity android:name=".controllers.activities.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -26,7 +26,7 @@
         </activity>
 
         <activity
-            android:name=".view.activities.HomeActivity"
+            android:name=".controllers.activities.HomeActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar"
             android:screenOrientation="portrait"
@@ -34,10 +34,10 @@
         </activity>
 
         <activity
-            android:name=".view.activities.LoginActivity"
+            android:name=".controllers.activities.LoginActivity"
             android:label="@string/title_activity_login" />
 
-        <activity android:name=".view.activities.RegisterActivity" />
+        <activity android:name=".controllers.activities.RegisterActivity" />
 
     </application>
 
